err/veriloggen.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/ipgen'...
Listing './lib/python3.5/site-packages/ipgen/rtl_converter'...
Listing './lib/python3.5/site-packages/ipgen/template'...
Listing './lib/python3.5/site-packages/ipgen/utils'...
Listing './lib/python3.5/site-packages/ipgen-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyverilog'...
Listing './lib/python3.5/site-packages/pyverilog/ast_code_generator'...
Listing './lib/python3.5/site-packages/pyverilog/ast_code_generator/template'...
Listing './lib/python3.5/site-packages/pyverilog/controlflow'...
Listing './lib/python3.5/site-packages/pyverilog/dataflow'...
Listing './lib/python3.5/site-packages/pyverilog/utils'...
Listing './lib/python3.5/site-packages/pyverilog/vparser'...
Listing './lib/python3.5/site-packages/pyverilog/vparser/ply'...
Listing './lib/python3.5/site-packages/pyverilog-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/utils'...
Listing './lib/python3.5/site-packages/veriloggen'...
Listing './lib/python3.5/site-packages/veriloggen/core'...
Listing './lib/python3.5/site-packages/veriloggen/dataflow'...
Listing './lib/python3.5/site-packages/veriloggen/fsm'...
Listing './lib/python3.5/site-packages/veriloggen/optimizer'...
Listing './lib/python3.5/site-packages/veriloggen/pipeline'...
Listing './lib/python3.5/site-packages/veriloggen/resolver'...
Listing './lib/python3.5/site-packages/veriloggen/seq'...
Listing './lib/python3.5/site-packages/veriloggen/simulation'...
Listing './lib/python3.5/site-packages/veriloggen/stream'...
Listing './lib/python3.5/site-packages/veriloggen/thread'...
Listing './lib/python3.5/site-packages/veriloggen/types'...
Listing './lib/python3.5/site-packages/veriloggen/verilog'...
Listing './lib/python3.5/site-packages/veriloggen-1.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
